--- a/themes/zen-jinja/templates/index.tmpl
+++ b/themes/zen-jinja/templates/index.tmpl
@@ -5,6 +5,8 @@
 {% extends 'base.tmpl' %}
 
 {% block content %}
+    <h1>Center for Mathematical Epidemiology</h1>
+
     {% for post in posts %}
         <div class="post">
             <h1 class="title"><a href="{{ post.permalink() }}">{{ post.title() }}</a></h1>
